--- a/Controller/Makefile
+++ b/Controller/Makefile
@@ -2,13 +2,16 @@ CFLAGS = -Wall -Wextra -std=c99
 
 all : build
 
-build : parser.o main
+build : parser.o main test_parser
 
 parser.o : parser.c
 	gcc ${CFLAGS} $< -c
 
-main : parser.o
-	gcc ${CFLAGS} $@.c $< -o $@
+main : main.c parser.o
+	gcc ${CFLAGS} $^ -o $@
+
+test_parser : test_parser.c parser.o
+	gcc ${CFLAGS} $^ -o $@
 
 clean :
 	rm *.o
