--- a/Controller/Makefile
+++ b/Controller/Makefile
@@ -2,7 +2,7 @@ CFLAGS = -Wall -Wextra -std=c99
 
 all : build
 
-build : parser.o main test_parser server
+build : parser.o main test_parser prompt server
 
 parser.o : parser.c
 	gcc ${CFLAGS} $< -c
@@ -13,6 +13,9 @@ main : main.c parser.o
 test_parser : test_parser.c parser.o
 	gcc ${CFLAGS} $^ -o $@
 
+prompt: prompt.c parser.o
+	gcc $(CFLAGS) $^ -o $@
+
 server: server.c
 	gcc ${CFLAGS} $^ -o $@
 
@@ -21,3 +24,4 @@ clean :
 	rm main
 	rm server
 	rm test_parser
+	rm prompt
