--- a/Controller/Makefile
+++ b/Controller/Makefile
@@ -2,7 +2,7 @@ CFLAGS = -Wall -Wextra -std=c99
 
 all : build
 
-build : parser.o main test_parser prompt
+build : parser.o main test_parser prompt test_fish
 
 parser.o : parser.c
 	gcc ${CFLAGS} $< -c
@@ -22,10 +22,13 @@ server: server.c
 fish.o : fish.c
 	gcc ${CFLAGS} $< -c
 
+test_fish : test_fish.c fish.o
+	gcc ${CFLAGS} $^ -o $@
+
 test_view : test_view.c view.o
 	gcc ${CFLAGS} $^ -o $@
 
-View.o : view.c
+view.o : view.c
 	gcc ${CFLAGS} $< -c
 
 aquarium.o : aquarium.c
@@ -33,4 +36,4 @@ aquarium.o : aquarium.c
 
 clean :
 	rm *.o
-	rm -f main server test_parser test_view prompt
+	rm -f main server test_parser test_view prompt test_fish
