GROS remaniement du serveur

--- a/Controller/Makefile
+++ b/Controller/Makefile
@@ -14,6 +14,9 @@ test : test_fish test_view test_aquarium
 $(SRC_DIR)/parser.o : $(SRC_DIR)/parser.c
 	gcc ${CFLAGS} ${INC_DIR} $< -c -o $@
 
+$(SRC_DIR)/thread.o : $(SRC_DIR)/thread.c
+	gcc ${CFLAGS} ${INC_DIR} $< -c -o $@
+
 $(SRC_DIR)/fish.o : $(SRC_DIR)/fish.c
 	gcc ${CFLAGS} ${INC_DIR} $< -c -o $@
 
@@ -29,7 +32,7 @@ $(SRC_DIR)/server_utils.o : $(SRC_DIR)/server_utils.c
 prompt: $(SRC_DIR)/prompt.c $(SRC_DIR)/parser.o
 	gcc $(CFLAGS) ${INC_DIR} $^ -o $@
 
-server: $(SRC_DIR)/server.c $(SRC_DIR)/server_utils.o $(SRC_DIR)/aquarium.o $(SRC_DIR)/view.o $(SRC_DIR)/fish.o
+server: $(SRC_DIR)/server.c $(SRC_DIR)/server_utils.o $(SRC_DIR)/aquarium.o $(SRC_DIR)/view.o $(SRC_DIR)/fish.o $(SRC_DIR)/thread.o
 	gcc ${CFLAGS} ${INC_DIR} $^ -o $@ -lm
 
 client_bidon: $(SRC_DIR)/client_bidon.c
