command_getfish first draft

--- a/Controller/Makefile
+++ b/Controller/Makefile
@@ -29,10 +29,13 @@ $(SRC_DIR)/aquarium.o : $(SRC_DIR)/aquarium.c
 $(SRC_DIR)/server_utils.o : $(SRC_DIR)/server_utils.c
 	gcc ${CFLAGS} ${INC_DIR} $< -c -o $@
 
+$(SRC_DIR)/command_getfish.o : $(SRC_DIR)/command_getfish.c
+	gcc ${CFLAGS} ${INC_DIR} $< -c -o $@
+
 prompt: $(SRC_DIR)/prompt.c $(SRC_DIR)/parser.o
 	gcc $(CFLAGS) ${INC_DIR} $^ -o $@
 
-server: $(SRC_DIR)/server.c $(SRC_DIR)/server_utils.o $(SRC_DIR)/aquarium.o $(SRC_DIR)/view.o $(SRC_DIR)/fish.o $(SRC_DIR)/thread.o
+server: $(SRC_DIR)/server.c $(SRC_DIR)/server_utils.o $(SRC_DIR)/aquarium.o $(SRC_DIR)/view.o $(SRC_DIR)/fish.o $(SRC_DIR)/thread.o $(SRC_DIR)/command_getfish.o
 	gcc ${CFLAGS} ${INC_DIR} $^ -o $@ -lm
 
 client_bidon: $(SRC_DIR)/client_bidon.c
