--- a/Controller/Makefile
+++ b/Controller/Makefile
@@ -36,7 +36,7 @@ prompt: $(SRC_DIR)/prompt.c $(SRC_DIR)/parser.o
 	gcc $(CFLAGS) ${INC_DIR} $^ -o $@
 
 server: $(SRC_DIR)/server.c $(SRC_DIR)/server_utils.o $(SRC_DIR)/aquarium.o $(SRC_DIR)/view.o $(SRC_DIR)/fish.o $(SRC_DIR)/thread.o $(SRC_DIR)/command_getfish.o
-	gcc ${CFLAGS} ${INC_DIR} $^ -o $@ -lm
+	gcc ${CFLAGS} ${INC_DIR} $^ -o $@ -lm -lpthread
 
 client_bidon: $(SRC_DIR)/client_bidon.c
 	gcc ${CFLAGS} ${INC_DIR} $^ -o $@
