moved prompt commands in an other file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
-        "server_utils.h": "c"
+        "server_utils.h": "c",
+        "prompt_commands.h": "c"
     }
 }
