--- a/Controller/Makefile
+++ b/Controller/Makefile
@@ -32,10 +32,13 @@ $(SRC_DIR)/server_utils.o : $(SRC_DIR)/server_utils.c
 $(SRC_DIR)/command_getfish.o : $(SRC_DIR)/command_getfish.c
 	gcc ${CFLAGS} ${INC_DIR} $< -c -o $@
 
-prompt: $(SRC_DIR)/prompt.c $(SRC_DIR)/parser.o
+$(SRC_DIR)/prompt_commands.o : $(SRC_DIR)/prompt_commands.c
+	gcc ${CFLAGS} ${INC_DIR} $< -c -o $@
+
+prompt: $(SRC_DIR)/prompt.c $(SRC_DIR)/parser.o  $(SRC_DIR)/server_utils.o $(SRC_DIR)/prompt_commands.o $(SRC_DIR)/aquarium.o $(SRC_DIR)/view.o $(SRC_DIR)/fish.o
 	gcc $(CFLAGS) ${INC_DIR} $^ -o $@
 
-server: $(SRC_DIR)/server.c $(SRC_DIR)/server_utils.o $(SRC_DIR)/aquarium.o $(SRC_DIR)/view.o $(SRC_DIR)/fish.o $(SRC_DIR)/thread.o $(SRC_DIR)/command_getfish.o
+server: $(SRC_DIR)/server.c $(SRC_DIR)/server_utils.o $(SRC_DIR)/aquarium.o $(SRC_DIR)/view.o $(SRC_DIR)/fish.o $(SRC_DIR)/thread.o $(SRC_DIR)/command_getfish.o $(SRC_DIR)/prompt_commands.o
 	gcc ${CFLAGS} ${INC_DIR} $^ -o $@ -lm -lpthread
 
 client_bidon: $(SRC_DIR)/client_bidon.c
