--- a/Controller/Makefile
+++ b/Controller/Makefile
@@ -35,13 +35,16 @@ $(SRC_DIR)/server_utils.o : $(SRC_DIR)/server_utils.c
 $(SRC_DIR)/command_getfish.o : $(SRC_DIR)/command_getfish.c
 	gcc ${CFLAGS} ${INC_DIR} $< -c -o $@
 
+$(SRC_DIR)/init_server.o : $(SRC_DIR)/init_server.c
+	gcc ${CFLAGS} ${INC_DIR} $< -c -o $@
+
 $(SRC_DIR)/prompt_commands.o : $(SRC_DIR)/prompt_commands.c
 	gcc ${CFLAGS} ${INC_DIR} $< -c -o $@
 
 prompt: $(SRC_DIR)/prompt.c $(SRC_DIR)/parser.o  $(SRC_DIR)/server_utils.o $(SRC_DIR)/prompt_commands.o $(SRC_DIR)/aquarium.o $(SRC_DIR)/view.o $(SRC_DIR)/fish.o
 	gcc $(CFLAGS) ${INC_DIR} $^ -o $@
 
-server: $(SRC_DIR)/server.c $(SRC_DIR)/server_utils.o $(SRC_DIR)/aquarium.o $(SRC_DIR)/view.o $(SRC_DIR)/fish.o $(SRC_DIR)/thread.o $(SRC_DIR)/command_getfish.o $(SRC_DIR)/prompt_commands.o $(SRC_DIR)/command_fish.o
+server: $(SRC_DIR)/server.c $(SRC_DIR)/server_utils.o $(SRC_DIR)/aquarium.o $(SRC_DIR)/view.o $(SRC_DIR)/fish.o $(SRC_DIR)/thread.o $(SRC_DIR)/command_getfish.o $(SRC_DIR)/prompt_commands.o $(SRC_DIR)/command_fish.o $(SRC_DIR)/init_server.o
 	gcc ${CFLAGS} ${INC_DIR} $^ -o $@ -lm -lpthread
 
 client_bidon: $(SRC_DIR)/client_bidon.c
