--- a/Controller/Makefile
+++ b/Controller/Makefile
@@ -7,7 +7,7 @@ INC_DIR = -I$(SRC_DIR) -I$(TEST_DIR)
 
 all : build test
 
-build : server client
+build : server client client_gfc
 
 test : test_fish test_view test_aquarium
 
@@ -36,7 +36,7 @@ $(SRC_DIR)/server_utils.o : $(SRC_DIR)/server_utils.c
 	gcc ${CFLAGS} ${INC_DIR} $< -c -o $@
 
 $(SRC_DIR)/command_getfish.o : $(SRC_DIR)/command_getfish.c
-	gcc ${CFLAGS} ${INC_DIR} $< -c -o $@
+	gcc ${CFLAGS} ${INC_DIR} $< -c -o $@ -lpthread
 
 $(SRC_DIR)/init_client.o : $(SRC_DIR)/init_client.c
 	gcc ${CFLAGS} ${INC_DIR} $< -c -o $@
@@ -48,6 +48,9 @@ server: $(SRC_DIR)/server.c $(SRC_DIR)/server_utils.o $(SRC_DIR)/aquarium.o $(SR
 	gcc ${CFLAGS} ${INC_DIR} $^ -o $@ -lm -lpthread
 
 client: $(SRC_DIR)/client.c
+	gcc ${CFLAGS} ${INC_DIR} $^ -o $@ -lpthread
+	
+client_gfc: $(SRC_DIR)/client_gfc.c
 	gcc ${CFLAGS} ${INC_DIR} $^ -o $@ -lpthread
 
 test_fish : $(SRC_DIR)/fish.o
@@ -62,4 +65,4 @@ test_aquarium: $(SRC_DIR)/fish.o $(SRC_DIR)/view.o $(SRC_DIR)/aquarium.o
 clean :
 	rm -f $(TST_DIR)/*.o
 	rm -f $(SRC_DIR)/*.o
-	rm -f server test_view prompt test_fish test_aquarium client
+	rm -f server test_view prompt test_fish test_aquarium client client_gfc
